--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "testResultsProcessor": "./node_modules/jest-bamboo-formatter"
     },
     "dependencies": {
+        "axios": "^0.16.2",
         "babel-plugin-transform-function-bind": "6.22.0",
         "babel-plugin-transform-object-assign": "6.22.0",
         "babel-plugin-transform-object-rest-spread": "6.23.0",
@@ -56,8 +57,8 @@
         "css-loader": "0.27.3",
         "ejs": "2.5.6",
         "eslint": "3.18.0",
-        "eslint-loader": "1.7.1",
         "eslint-config-airbnb": "14.1.0",
+        "eslint-loader": "1.7.1",
         "eslint-plugin-import": "2.2.0",
         "eslint-plugin-jsx-a11y": "4.0.0",
         "eslint-plugin-react": "6.10.2",
