--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "scripts": {
         "dev": "webpack-dev-server --config webpack.config.js --hot --progress --inline --colors",
         "build": "webpack --config webpack.config.js --progress --colors --display-error-details",
-        "postinstall": "gulp production",
+        "postinstall": "npm run build",
         "start": "node server.js"
     },
     "dependencies": {
